[package]
name = "dsp_box"
version = "0.0.1"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "waveshaper"

[dependencies]
iced = { git = "https://github.com/hecrj/iced", features=["tokio"] }
iced_audio = { git = "https://github.com/BillyDM/iced_audio", branch="iced_git" }
jack = "0.6"
sndfile = { version = "0.0" }