[package]
name = "dsp_box"
version = "0.0.0"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
license = "GPL-3.0"
edition = "2018"
keywords = ["audio", "dsp", "prototyping"]
categories = ["multimedia::audio", "visualization"]
description = "A tool for learning and prototyping audio DSP concepts in Rust"
homepage = "https://github.com/BillyDM/DSP-Box"
documentation = "https://docs.rs/dsp_box"
repository = "https://github.com/BillyDM/DSP-Box"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "waveshaper"

[dependencies]
iced = { git = "https://github.com/hecrj/iced", features=["tokio"] }
iced_audio = { git = "https://github.com/BillyDM/iced_audio", branch="iced_git" }
jack = "0.6"
sndfile = { version = "0.0" }